loop-ivopts.c: New file.
	* loop-ivopts.c: New file.
	* Makefile.in (loop-ivopts.o): New.
	* cfgloop.h (loop_max_regno): Declare.
	(struct iv_occurence): Add aux field.
	(struct movable_list): Comment.
	(struct ivopt_actions): New structure.
	(loop_avail_regs): Declare.
	(hoist_insn_to_depth, find_single_def_use, detect_strength_reductions,
	execute_strength_reductions): Declare.
	* loop-init.c (loop_avail_regs): Moved from loop-invariant.c, renamed
	and exported.
	(loop_optimizer_optimize): Add induction variable optimizations.
	* loop-invariant.c (estimate_replacement_possibilities): Split off ...
	(find_single_def_use): ... new.
	(hoist_insn_to_depth): Export.
	(determine_move_depth): Use loop_avail_regs instead of avail_regs.
	(detect_movable_set): Use find_single_def_use.
	* loop-iv.c (max_regno): Rename to loop_max_regno and export.
	(dump_equations, simplify_ivs_using_values, initialize_iv_analysis,
	compute_loop_end_values, compute_initial_values,
	iv_new_insn_changes_commit, analyse_induction_variables): Use
	loop_max_regno instead of max_regno.
	(enter_iv_occurence): Initialize aux field.
	(compute_loop_end_values): Initialize values correctly.
	* params.def (STR_N_USABLE_REGS, STR_SPILL_COST, STR_REG_WEIGHT):
	New.

From-SVN: r69267

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -812,7 +812,7 @@ OBJS = algebraic.o alias.o bb-reorder.o bitmap.o builtins.o caller-save.o  \
  loop-init.o loop-unswitch.o loop-unroll.o loop-iv.o loop-invariant.o	   \
  loop.o mbchar.o optabs.o params.o predict.o print-rtl.o print-tree.o	   \
  profile.o ra.o ra-build.o ra-colorize.o ra-debug.o ra-rewrite.o	   \
- real.o recog.o reg-stack.o regclass.o regmove.o regrename.o		   \
+ real.o recog.o reg-stack.o regclass.o regmove.o regrename.o loop-ivopts.o \
  reload.o reload1.o reorg.o resource.o rtl.o rtlanal.o rtl-error.o	   \
  sbitmap.o sched-deps.o sched-ebb.o sched-rgn.o sched-vis.o sdbout.o	   \
  sibcall.o simplify-rtx.o sreal.o ssa.o ssa-ccp.o ssa-dce.o stmt.o	   \
@@ -1701,7 +1701,11 @@ algebraic.o : algebraic.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
 loop-invariant.o: loop-invariant.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h loop.h cfglayout.h params.h \
    output.h $(EXPR_H) coretypes.h $(TM_P_H) $(RECOG_H) insn-config.h \
-   $(REGS_H) function.h df.h flags.h algebraic.h el-rtx.h
+   $(REGS_H) function.h df.h flags.h  el-rtx.h algebraic.h
+loop-ivopts.o: loop-ivopts.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
+   $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h loop.h cfglayout.h params.h \
+   output.h $(EXPR_H) coretypes.h $(TM_P_H) $(RECOG_H) insn-config.h \
+   $(REGS_H) function.h df.h flags.h el-rtx.h algebraic.h
 loop-unroll.o: loop-unroll.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h params.h \
    output.h $(EXPR_H) coretypes.h
