Makefile.in (cfgloopmanip.o): Add predict.h dependency.
	* Makefile.in (cfgloopmanip.o): Add predict.h dependency.
	* cfglayout.c (cfg_layout_duplicate_bb): Put new blocks
	on more sane place in chain.
	* cfgloop.h (execute_strength_reductions): Declaration changed.
	* cfgloopmanip.c: Include predict.h.
	(loop_split_edge_with): Put new blocks on more sane place in chain.
	(copy_loop_headers): Put PRED_LOOP_HEADER prediction on the
	appropriate edge.
	* loop-init.c (loop_optimizer_optimize): Pass loops parameter to
	execute_strength_reductions.
	* loop-ivopts.c: Comment updates.
	(struct str_red): New fields equal_to, eq_occ, forces, increment_after.
	(create_biv_for): Initialize them.
	(dump_new_biv): Dump them.
	(struct repl_alt): Field inc_by removed.
	(execute_strength_reduction): Don't handle it.
	(MANY_IVS): Increased to 50.
	(INSN_DOMINATED_BY_P): New.
	(schedule_autoinc, kill_old_global_iv, add_iv_elimination): Use it.
	(remove_unnecesary_fvrepls, fixup_preserved_bivs, record_old_biv): New.
	(detect_strength_reductions, add_iv_elimination, schedule_repl_for,
	gen_cond_repl_rtx, create_biv, execute_strength_reductions,
	determine_reductions_to_perform, estimate_gain): Handle a
	possibility to preserve old biv.
	(schedule_autoinc): Update for changed fields.
	(derive_iv_from): Don't initialize removed inc_by field.

From-SVN: r69798

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1679,7 +1679,8 @@ cfgloopanal.o : cfgloopanal.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) algebraic.h \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h $(EXPR_H) coretypes.h $(TM_H) \
    el-rtx.h
 cfgloopmanip.o : cfgloopmanip.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) \
-   $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h output.h coretypes.h $(TM_H)
+   $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h output.h \
+   coretypes.h $(TM_H) predict.h
 loop-init.o : loop-init.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) gcov-io.h \
    gcov-iov.h $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h profile.h \
    coretypes.h $(TM_H) flags.h $(TIMEVAR_H)
