--- a/libmudflap/config.h.in
+++ b/libmudflap/config.h.in
@@ -9,11 +9,26 @@
 /* Define if you have the dlvsym function.  */
 #undef HAVE_DLVSYM
 
+/* Define if you have the fopen64 function.  */
+#undef HAVE_FOPEN64
+
+/* Define if you have the fseeko64 function.  */
+#undef HAVE_FSEEKO64
+
+/* Define if you have the ftello64 function.  */
+#undef HAVE_FTELLO64
+
 /* Define if you have the gettimeofday function.  */
 #undef HAVE_GETTIMEOFDAY
 
 /* Define if you have the signal function.  */
 #undef HAVE_SIGNAL
+
+/* Define if you have the stat64 function.  */
+#undef HAVE_STAT64
+
+/* Define if you have the <dlfcn.h> header file.  */
+#undef HAVE_DLFCN_H
 
 /* Define if you have the <execinfo.h> header file.  */
 #undef HAVE_EXECINFO_H
@@ -35,6 +50,9 @@
 
 /* Version number of package */
 #undef VERSION
+
+/* union semun defined in sys/ipc.h or sys/sem.h */
+#undef HAVE_UNION_SEMUN
 
 /* pthread_create symbol version */
 #undef PTHREAD_CREATE_VERSION
