--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2715,6 +2715,7 @@ all_gtfiles="$target_gtfiles"
 # Files for gengtype with language
 all_gtfiles_files_langs=
 all_gtfiles_files_files=
+all_need_gmp="no"
 
 # Add the language fragments.
 # Languages are added via two mechanisms.  Some information must be
@@ -2736,6 +2737,7 @@ do
 		stagestuff=
 		outputs=
 		gtfiles=
+		need_gmp=
 		. ${srcdir}/$s/config-lang.in
 		if test "x$language" = x
 		then
@@ -2763,6 +2765,10 @@ do
                          all_gtfiles_files_files="$all_gtfiles_files_files ${f} "
                      fi
                 done
+		if test "x$need_gmp" = xyes
+		then
+			all_need_gmp="yes"
+		fi
 	fi
 done
 
@@ -2866,6 +2872,59 @@ changequote([, ])dnl
 fi
 AC_SUBST(gcc_tooldir)
 AC_SUBST(dollar)
+
+gmplibs=
+gmpinc=
+# Only check for GMP if one of the frontends needs it.
+if test "x$all_need_gmp" = xyes; then
+  # Specify a location for gmp
+  AC_ARG_WITH(gmp-dir, [  --with-gmp-dir=PATH     Specify source directory for GMP library])
+
+  if test "x$with_gmp_dir" != x && test -f "$with_gmp_dir/gmp.h"; then
+    gmpinc="-I$with_gmp_dir"
+    if test -f "$with_gmp_dir/.libs/libgmp.a"; then
+      gmplibs="$with_gmp_dir/.libs/libgmp.a"
+    elif test -f "$with_gmp_dir/_libs/libgmp.a"; then
+      gmplibs="$with_gmp_dir/_libs/libgmp.a"
+    fi
+    # One of the later tests will catch the error if neither library is present.
+  fi
+
+  AC_ARG_WITH(gmp, [  --with-gmp=PATH         Specify directory for installed GMP library])
+
+  if test "x$with_gmp" != x && test -d "$with_gmp"; then
+    gmplibs="-L$with_gmp/lib -lgmp"
+    gmpinc="-I$with_gmp/include"
+  fi
+
+  # Use system gmp if nothing else specified
+  if test "x$gmplibs" = x; then
+    gmplibs="-lgmp"
+  fi
+
+  save_CFLAGS="$CFLAGS"
+  CFLAGS="$CFLAGS $gmpinc"
+  # Check GMP actually works
+  AC_MSG_CHECKING([for correct version of gmp.h])
+  AC_TRY_COMPILE([#include "gmp.h"],[
+#if __GNU_MP_VERSION < 3
+  choke me
+#endif
+], [AC_MSG_RESULT([yes])],
+    [AC_MSG_ERROR([gmp version 3.0 or later is required])])
+
+  AC_MSG_CHECKING([for mpf_init in -lgmp])
+
+  saved_LIBS="$LIBS"
+  LIBS="$LIBS $gmplibs"
+  AC_TRY_LINK([#include <gmp.h>], [mpf_t n; mpf_init(n);],
+    [AC_MSG_RESULT([yes])],  [AC_MSG_ERROR([could not link with libgmp])])
+  LIBS="$saved_LIBS"
+  CFLAGS="$saved_CFLAGS"
+fi
+
+AC_SUBST(gmplibs)
+AC_SUBST(gmpinc)
 
 # Find a directory in which to install a shared libgcc.
 
