--- a/gcc/fortran/config-lang.in
+++ b/gcc/fortran/config-lang.in
@@ -16,5 +16,7 @@ target_libs=target-libgfortran
 
 gtfiles="\$(srcdir)/fortran/f95-lang.c \$(srcdir)/fortran/trans-decl.c \$(srcdir)/fortran/trans-intrinsic.c \$(srcdir)/fortran/trans-io.c \$(srcdir)/fortran/trans-types.c \$(srcdir)/fortran/trans-types.h \$(srcdir)/fortran/trans.h \$(srcdir)/fortran/trans-const.h"
 
+need_gmp="yes"
+
 #outputs=g95/Makefile
 
