gfortran.h: Introduce options to control the mangling.
        * gfortran.h: Introduce options to control the mangling.
        * lang.opt: Likewise.
        * options.c (gfc_init_options): Handle the options.
        * trans-common.c (gfc_sym_mangled_common_id): New function.
        (gfc_build_common_decl): Call it.
        * trans-decl.c (gfc_sym_mangled_function_id): New function.
        (gfc_get_extern_function_decl, gfc_build_function_decl): Call it.
	* intrinsic.c (add_sym): Prefix names with correct string.
	(add_sym_0s): New function.
	(add_subroutines): Register abort.
libgfor
	* Makefile.am (gfor_helper_src): Add intrinsics/abort.c.
	(FFLAGS): Add -fno-underscoring.
	* Makefile.in: Regenerate.
	* intrinsics/abort.c: New file.

From-SVN: r70292

--- a/libgfortran/Makefile.am
+++ b/libgfortran/Makefile.am
@@ -30,6 +30,7 @@ gfor_io_headers= \
 io/io.h
 
 gfor_helper_src= \
+intrinsics/abort.c \
 intrinsics/cpu_time.c \
 intrinsics/eoshift0.c \
 intrinsics/eoshift2.c \
