--- a/gcc/fortran/Make-lang.in
+++ b/gcc/fortran/Make-lang.in
@@ -167,19 +167,19 @@ f95.install-normal:
 f95.install-common: installdirs
 	-if [ -f f951$(exeext) ] ; then \
 	  if [ -f gfortran-cross$(exeext) ] ; then \
-	    rm -f $(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
-	    $(INSTALL_PROGRAM) gfortran-cross$(exeext) $(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
-	    chmod a+x $(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
-	    if [ -d $(gcc_tooldir)/bin/. ] ; then \
-	      rm -f $(gcc_tooldir)/bin/gfortran$(exeext); \
-	      $(INSTALL_PROGRAM) gfortran-cross$(exeext) $(gcc_tooldir)/bin/gfortran$(exeext); \
+	    rm -f $(DESTDIR)$(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
+	    $(INSTALL_PROGRAM) gfortran-cross$(exeext) $(DESTDIR)$(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
+	    chmod a+x $(DESTDIR)$(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
+	    if [ -d $(DESTDIR)$(gcc_tooldir)/bin/. ] ; then \
+	      rm -f $(DESTDIR)$(gcc_tooldir)/bin/gfortran$(exeext); \
+	      $(INSTALL_PROGRAM) gfortran-cross$(exeext) $(DESTDIR)$(gcc_tooldir)/bin/gfortran$(exeext); \
 	    else true; fi; \
 	  else \
-	    rm -f $(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
-	    $(INSTALL_PROGRAM) gfortran$(exeext) $(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
-	    chmod a+x $(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
-	    rm -f $(bindir)/$(GFORTRAN_TARGET_INSTALL_NAME)$(exeext); \
-	    $(LN) $(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext) $(bindir)/$(GFORTRAN_TARGET_INSTALL_NAME)$(exeext); \
+	    rm -f $(DESTDIR)$(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
+	    $(INSTALL_PROGRAM) gfortran$(exeext) $(DESTDIR)$(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
+	    chmod a+x $(DESTDIR)$(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
+	    rm -f $(DESTDIR)$(bindir)/$(GFORTRAN_TARGET_INSTALL_NAME)$(exeext); \
+	    $(LN) $(DESTDIR)$(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext) $(DESTDIR)$(bindir)/$(GFORTRAN_TARGET_INSTALL_NAME)$(exeext); \
 	  fi ; \
 	fi
 
@@ -187,17 +187,17 @@ f95.install-common: installdirs
 # Taken from G77 (but then, what is not...)
 f95.install-info: f95.info installdirs
 	if [ -f $(srcdir)/fortran/gfortran.info ] ; then \
-	  rm -f $(infodir)/gfortran.info*; \
+	  rm -f $(DESTDIR)$(infodir)/gfortran.info*; \
 	  for f in $(srcdir)/fortran/gfortran.info*; do \
 	      realfile=`echo $$f | sed -e 's|.*/\([^/]*\)$$|\1|'`; \
-	      $(INSTALL_DATA) $$f $(infodir)/$$realfile; \
+	      $(INSTALL_DATA) $$f $(DESTDIR)$(infodir)/$$realfile; \
 	  done; \
-	  chmod a-x $(infodir)/gfortran.info*; \
+	  chmod a-x $(DESTDIR)$(infodir)/gfortran.info*; \
 	else true; fi
 	@if [ -f $(srcdir)/fortran/gfortran.info ] ; then \
 	  if $(SHELL) -c 'install-info --version | sed 1q | fgrep -s -v -i debian' >/dev/null 2>&1; then \
-	  echo " install-info --info-dir=$(infodir) $(infodir)/gfortran.info"; \
-	    install-info --info-dir=$(infodir) $(infodir)/gfortran.info || : ; \
+	  echo " install-info --info-dir=$(DESTDIR)$(infodir) $(DESTDIR)$(infodir)/gfortran.info"; \
+	    install-info --info-dir=$(DESTDIR)$(infodir) $(DESTDIR)$(infodir)/gfortran.info || : ; \
 	  else : ; fi; \
 	else : ; fi
 
@@ -206,12 +206,12 @@ f95.install-man: installdirs
 
 f95.uninstall:
 	if $(SHELL) -c 'install-info --version | sed 1q | fgrep -s -v -i debian' >/dev/null 2>&1; then \
-	  echo " install-info --delete --info-dir=$(infodir) $(infodir)/gfortran.info"; \
-	  install-info --delete --info-dir=$(infodir) $(infodir)/gfortran.info || : ; \
+	  echo " install-info --delete --info-dir=$(DESTDIR)$(infodir) $(DESTDIR)$(infodir)/gfortran.info"; \
+	  install-info --delete --info-dir=$(DESTDIR)$(infodir) $(DESTDIR)$(infodir)/gfortran.info || : ; \
 	else : ; fi; \
-	rm -rf $(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
-	rm -rf $(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
-	rm -rf $(infodir)/gfortran.info*
+	rm -rf $(DESTDIR)$(bindir)/$(GFORTRAN_INSTALL_NAME)$(exeext); \
+	rm -rf $(DESTDIR)$(bindir)/$(GFORTRAN_CROSS_NAME)$(exeext); \
+	rm -rf $(DESTDIR)$(infodir)/gfortran.info*
 
 #
 # Clean hooks:
