--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -2920,10 +2920,7 @@ methoddef:
 	  methoddecl
 		{
 		  objc_pq_context = 0;
-		  if (objc_inherit_code == CLASS_METHOD_DECL)
-		    add_class_method (objc_implementation_context, $3);
-		  else
-		    add_instance_method (objc_implementation_context, $3);
+		  add_method (objc_implementation_context, $3, objc_inherit_code == CLASS_METHOD_DECL);
 		  start_method_def ($3);
 		}
 	  optarglist
@@ -2961,10 +2958,7 @@ methodproto:
 		{
 		  /* Forget protocol qualifiers here.  */
 		  objc_pq_context = 0;
-		  if (objc_inherit_code == CLASS_METHOD_DECL)
-		    add_class_method (objc_interface_context, $3);
-		  else
-		    add_instance_method (objc_interface_context, $3);
+		  add_method (objc_interface_context, $3, objc_inherit_code == CLASS_METHOD_DECL);
 		}
 	  semi_or_error
 	;
