backport: re PR target/9929 (Can't find spill register in GENERAL_REGS)
	Backport from SuSE local:
	Tue Mar 18 19:06:18 CET 2003  Jan Hubicka  <jh@suse.cz>
		* i386.c (use_fast_prologue_epilogue): Remove.
		(machine_function): New fields use_fast_prologue_epilogue;
		use_fast_prologue_epilogue_initialized.
		(ix86_frame): New field save_regs-using_mov;
		(ix86_compute_frame_layout):  Decide on fast prologues;
		allocate saved registers in red zone.
		(ix86_expand_epilogue, ix86_expand_prolgoues): Obey new parameters.
	Mon Mar  3 12:01:16 CET 2003  Jan Hubicka  <jh@suse.cz>
		* i386.c (classify_argument): Obey MUST_PASS_IN_STACK.
		* i386.h (MUST_PASS_IN_STACK): Use default_must_pass_in_stack
		for x86-64.

	Mon Apr 21 15:13:51 CEST 2003  Jan Hubicka  <jh@suse.cz>
		* reload.c (find_valid_class):  Allow fixed registers to refuse
		the mode; compute real amount of choices to allocate given register.

	Sun Apr  6 17:43:49 CEST 2003  Jan Hubicka  <jh@suse.cz>
		PR target/9929
		* reload.c (find_reloads_toplev):  Remove now redundant alternative
		(find_reloads_address_1): Synchronize handling of subregs with
		find_reloads_toplev;  Always reload whole subreg when the inner
		value requires more registers.

	Zdenek Dvorak
		   * flow.c (MAX_LIVENESS_ROUNDS): New.
		   (calculate_global_regs_live): Guarantee that liveness updating will
		   terminate.
		   (update_life_info_in_dirty_blocks): Remove hack that masked the bug.

From-SVN: r70849

--- a/gcc/gccbug.in
+++ b/gcc/gccbug.in
@@ -28,7 +28,7 @@ VERSION=3.113
 SUBMITTER=net
 
 # The default mail address for PR submissions. 
-GNATS_ADDR=gcc-gnats@gcc.gnu.org
+GNATS_ADDR=feedback@suse.de
 
 # The default release for this host.
 DEFAULT_RELEASE="@gcc_version_full@"
@@ -305,6 +305,7 @@ Subject:
 From: $FROM
 Reply-To: $REPLYTO
 Cc: $CC
+X-Feedback-Type: GCC-Bug 
 X-send-pr-version: $VERSION
 X-GNATS-Notify: 
 
