--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1669,25 +1669,16 @@ changequote(,)dnl
 changequote([,])dnl
 	fi
 fi
+# non-GNU linkers don't seem to support .hidden yet
+if test x"$gnu_ld_flag" = x"no"; then
+      gcc_cv_as_hidden=no
+fi
 if test x"$gcc_cv_as_hidden" = xyes; then
 	AC_DEFINE(HAVE_GAS_HIDDEN, 1,
 		[Define if your assembler supports .hidden.])
 fi
 AC_MSG_RESULT($gcc_cv_as_hidden)
 libgcc_visibility=$gcc_cv_as_hidden
-case "$target" in
-  mips-sgi-irix6*)
-    if test x"$gnu_ld_flag" = x"no"; then
-      # Even if using gas with .hidden support, the resulting object files
-      # cannot be linked with the IRIX 6 O32 linker.  With the N32 and
-      # N64 linkers, the problem is that the linker refuses to accept
-      # -call_shared (passed by default to the linker) and -r (used to
-      # link the object file generated without .hidden directives with
-      # one that hides symbols), so we also lose.
-      libgcc_visibility=no
-    fi
-    ;;
-esac
 AC_SUBST(libgcc_visibility)
 
 AC_MSG_CHECKING(assembler leb128 support)
@@ -2253,6 +2244,21 @@ changequote([,])dnl
 	AC_DEFINE_UNQUOTED(HAVE_GAS_`echo "$gcc_cv_as_instructions" | sed -e 's/ $//' | tr '[a-z ]' '[A-Z_]'`)
     fi
     AC_MSG_RESULT($gcc_cv_as_instructions)
+
+    AC_MSG_CHECKING(cmov syntax)
+    gcc_cv_as_ix86_cmov_sun_syntax=no
+    if test x$gcc_cv_as != x; then
+	echo 'cmovl.l %edx, %eax' > conftest.s
+	if $gcc_cv_as -o conftest.o conftest.s > /dev/null 2>&1; then
+		    gcc_cv_as_ix86_cmov_sun_syntax=yes
+	fi
+	rm -f conftest.s conftest.o
+    fi
+    if test "x$gcc_cv_as_ix86_cmov_sun_syntax" = xyes; then
+	AC_DEFINE(HAVE_AS_IX86_CMOV_SUN_SYNTAX, 1,
+          [Define if your assembler supports the Sun syntax for cmov.])
+    fi
+    AC_MSG_RESULT($gcc_cv_as_ix86_cmov_sun_syntax)
 
     AC_MSG_CHECKING(assembler GOTOFF in data directives)
     gcc_cv_as_gotoff_in_data=no
