--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1667,11 +1667,12 @@ changequote(,)dnl
 			fi
 		fi
 changequote([,])dnl
+	else
+		# non-GNU linkers don't seem to support .hidden yet
+		if test x"$gnu_ld_flag" = x"no"; then
+		      gcc_cv_as_hidden=no
+		fi
 	fi
-fi
-# non-GNU linkers don't seem to support .hidden yet
-if test x"$gnu_ld_flag" = x"no"; then
-      gcc_cv_as_hidden=no
 fi
 if test x"$gcc_cv_as_hidden" = xyes; then
 	AC_DEFINE(HAVE_GAS_HIDDEN, 1,
